--- a/mbofui/bower.json
+++ b/mbofui/bower.json
@@ -20,7 +20,8 @@
     "jquery": "1.10.1",
     "angular-leaflet-directive": "^0.10.0",
     "moment": ">=2.8.0 <2.12.0",
-    "bower-package": "*"
+    "bower-package": "*",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7"
