--- a/mbofui/bower.json
+++ b/mbofui/bower.json
@@ -5,12 +5,9 @@
     "angular": "^1.4.7",
     "bootstrap": "3.3.4",
     "angular-animate": "^1.4.7",
-    "angular-cookies": "^1.4.7",
-    "angular-rangeslider": "^0.0.14",
     "angular-resource": "^1.4.7",
     "angular-route": "^1.4.7",
     "angular-sanitize": "^1.4.7",
-    "angular-touch": "^1.4.7",
     "angular-simple-logger": "https://github.com/nmccready/angular-simple-logger.git#^0.1.7",
     "leaflet": "^0.7.7",
     "leaflet.markercluster": "https://github.com/Leaflet/Leaflet.markercluster.git#^0.5.0",
@@ -22,7 +19,7 @@
     "bower-package": "*",
     "underscore": "^1.8.3",
     "leaflet-plugins": "^1.6.0",
-    "ui-leaflet": "https://angular-ui.github.com/ui-leaflet"
+    "ui-leaflet": "https://github.com/angular-ui/ui-leaflet.git"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7"
