--- a/hacks_mbof/settings.py.template
+++ b/hacks_mbof/settings.py.template
@@ -24,10 +24,11 @@ BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = ''
 
+# For using behind an SSL - sets api calls to https instead of http
+SECURE_PROXY_SSL_HEADER = ('HTTP_X_FORWARDED_PROTO', 'https')
+
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
-
-SECURE_SSL_REDIRECT = True
 
 ALLOWED_HOSTS = []
 
