--- a/hacks_mbof/settings.py.template
+++ b/hacks_mbof/settings.py.template
@@ -17,6 +17,7 @@ import sys
 
 BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
 
+#Remove this comment please
 
 # Quick-start development settings - unsuitable for production
 # See https://docs.djangoproject.com/en/1.9/howto/deployment/checklist/
