--- a/mbofui/bower.json
+++ b/mbofui/bower.json
@@ -20,7 +20,8 @@
     "underscore": "^1.8.3",
     "leaflet-plugins": "^1.6.0",
     "ui-leaflet": "https://github.com/angular-ui/ui-leaflet.git",
-    "bootstrap-toggle": "^2.2.2"
+    "bootstrap-toggle": "^2.2.2",
+    "webshim": "^1.15.10"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7"
