--- a/mbofui/bower.json
+++ b/mbofui/bower.json
@@ -2,12 +2,12 @@
   "name": "mbofui",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.5.5",
+    "angular": "^1.4.7",
     "bootstrap": "3.3.4",
-    "angular-animate": "1.5.5",
-    "angular-resource": "1.5.5",
-    "angular-route": "1.5.5",
-    "angular-sanitize": "1.5.5",
+    "angular-animate": "^1.4.7",
+    "angular-resource": "^1.4.7",
+    "angular-route": "^1.4.7",
+    "angular-sanitize": "^1.4.7",
     "angular-simple-logger": "https://github.com/nmccready/angular-simple-logger.git#^0.1.7",
     "leaflet": "^0.7.7",
     "leaflet.markercluster": "https://github.com/Leaflet/Leaflet.markercluster.git#^0.5.0",
@@ -23,11 +23,11 @@
     "webshim": "^1.15.10"
   },
   "devDependencies": {
-    "angular-mocks": "1.5.5"
+    "angular-mocks": "^1.4.7"
   },
   "appPath": "app",
   "moduleName": "mbofuiApp",
   "resolutions": {
-    "angular": "1.5.5"
+    "angular": "^1.4.7"
   }
 }
